ingress-overseerr.yaml
## Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik-external
  rules:
  - host: requests.farh.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  overseerr
            port:
              number: 5055
  tls:
  - hosts:
    - requests.farh.net
    secretName: farh-net-cert-letsencrypt
